--- a/docs/1.basicConcepts/1.JSX.md
+++ b/docs/1.basicConcepts/1.JSX.md
@@ -1,1 +1,34 @@
-# جی اس ایکس
+# JSX
+
+
+
+JSX در واقع یک فرمت نوشتاری است که برای ساخت و تعریف المان ها در React.js استفاده می‌شود. JSX به صورت یک افزونه سینتکسی (Syntax Extention) به زبان جاوا اسکریپت اضافه شده است که با استفاده از آن می‌توان المان‌هایی را که با React ساخته می‌شوند را نمایش داد. در واقع JSX با استفاده از تگ‌های شبیه به HTML و نزدیک به زبان‌های مرسوم مانند HTML عمل می‌کند.
+
+React.js از JSX به منظور ساخت المان‌هایی استفاده می‌کند که به صورت کامپوننت‌های React تعریف شده‌اند. از جمله ویژگی‌هایی که باعث محبوبیت React.js در بین توسعه دهندگان وب شده است، استفاده از JSX است.
+
+برای استفاده از JSX کافیست ریکت را به فایل خود import کنید.
+
+```javascript
+import React from 'react';
+```
+
+
+
+این یک مثال ساده از استفاده از JSX در React.js است:
+
+```javascript
+import React from 'react';
+
+function HelloWorld() {
+  return (
+    <div>
+      <h1>Hello, world!</h1>
+      <p>This is a sample JSX code in React.js</p>
+    </div>
+  );
+}
+
+export default HelloWorld;
+```
+
+در این مثال، یک کامپوننت ساده به نام HelloWorld تعریف شده است که شامل یک تگ div است که شامل دو المان h1 و p است. این المان‌ها با استفاده از سینتکس JSX تعریف شده‌اند. در React.js می‌توان از JSX برای تعریف کامپوننت‌ها و المان‌های واقعی در صفحه نمایش استفاده کرد.
