--- a/docs/1.basicConcepts/1.JSX.md
+++ b/docs/1.basicConcepts/1.JSX.md
@@ -14,7 +14,7 @@ import React from 'react';
 
 
 
-این یک مثال ساده از استفاده از JSX در React.js است:
+این یک مثال ساده برای استفاده از JSX در React.js است:
 
 ```javascript
 import React from 'react';
