--- a/docs/1.basicConcepts/2.component.md
+++ b/docs/1.basicConcepts/2.component.md
@@ -1,1 +1,61 @@
-# کامپوننت
+# Component
+
+
+کامپوننت یکی از اصلی ترین و پایه ای ترین مفاهیم React در ساخت صفحات وب است که درواقع یک صفحه وب تشکیل شده از تعدادی کامپوننت که با یکدیگر در تعامل هستند.
+
+```
+import React, { Component } from 'react';
+
+class MyComponent extends Component {
+  constructor(props) {
+    super(props);
+
+    this.state = {
+      count: 0
+    };
+  }
+
+  handleClick = () => {
+    this.setState(prevState => ({
+      count: prevState.count + 1
+    }));
+  }
+
+  render() {
+    return (
+      <div>
+        <h1>My Component</h1>
+        <p>Count: {this.state.count}</p>
+        <button onClick={this.handleClick}>Click Me</button>
+      </div>
+    );
+  }
+}
+
+export default MyComponent;
+
+```
+
+مثال بالا یک نمونه ساده از کمپوننت را نشان میدهد. در این مثال، یک کامپوننت React به نام `MyComponent` تعریف شده است که شامل یک  (`count`) و یک رویداد کلیک (`handleClick`) است. این کامپوننت یک عنوان (`h1`) و یک پاراگراف (`p`) را به همراه مقدار حالت `count` و یک دکمه (`button`) که با کلیک بر روی آن مقدار `count` افزایش می یابد، رندر می کند.
+
+با تعریف این کامپوننت، می توان آن را در دیگر کامپوننت ها و صفحات وب استفاده کرد، به عنوان مثال:
+
+```
+import React, { Component } from 'react';
+import MyComponent from './MyComponent';
+
+class App extends Component {
+  render() {
+    return (
+      <div>
+        <h1>My App</h1>
+        <MyComponent />
+      </div>
+    );
+  }
+}
+
+export default App;
+```
+
+در این مثال، کامپوننت `MyComponent` به عنوان یک کامپوننت دیگر در کامپوننت `App` استفاده شده است. با این کار، قابلیت استفاده مجدد این کامپوننت و ساختاردهی بهتر وب سایت افزایش می یابد.
